--- a/landing_page.html
+++ b/landing_page.html
@@ -163,7 +163,7 @@
                     </div>
                     <div class="about_me_details">
                         <p class="text_about_me">
-                           A Fresh graduate enthusiastic about developing practical experience in the realm of web development. Educational background in Computer Science provides a strong foundation to continuously learn and refine skills in the technology field. Throughout academic journey, have developed a range of skills and experiences, which have been further enriched through role as a Junior Web Developer during an internship at a college.
+                           Enthusiastic about developing practical experience in the realm of web development. Educational background in Computer Science provides a strong foundation to continuously learn and refine skills in the technology field. Throughout academic journey, have developed a range of skills and experiences, which have been further enriched through role as a Junior Web Developer during an internship at a college.
                         </p>
                     </div>
                     <div class="subheading_about_me">
