--- a/contact_page.html
+++ b/contact_page.html
@@ -33,13 +33,13 @@
           <span class="nav__font_portfolio">Portfolio</span>
         </div>
       </nav>
-    </header>
+   </header>
 
     <main>
         <aside id="aside">
             <div class="profile_card">
           <img class="img_me" src="assets/img/me.png" alt="" />
-          <p class="font_name"><b>Hary Mahayana</b></p>
+          <p class="font_name"><strong>Hary Mahayana</strong></p>
           <p class="job_title">Fullstack Developer</p>
           <div class="icon_social_media">
             <a class="btn" href="https://www.facebook.com/arikmahayana07/"
@@ -55,6 +55,7 @@
               ><i class="fa-brands fa-github github"></i
             ></a>
           </div>
+
           <div class="container_card">
             <div class="card">
               <div class="contact top_contact">
@@ -105,6 +106,7 @@
                 </div>
               </div>
               <div class="line-stroke-contact"></div>
+              
               <div class="btn_resume"
               >
               <a class="text-decoration-none" href="assets/pdf/resume-I_Made_Hary_Mahayana.pdf" target="_blank">
@@ -117,6 +119,7 @@
         </aside>
         <section>
             <div id="section_menu">
+
                 <div class="nav_card"> 
                     <div class="row">
                     <a href="landing_page.html">
@@ -155,7 +158,7 @@
                     </div>
                 </div>
             </div>
-                <div class="about_me_card">
+                          <div class="about_me_card">
                             <div class="heading_about_me">
                                 <span class="about_me_text">Contact</span>
                                 <div class="line-stroke"></div>
@@ -213,31 +216,32 @@
                             </div>
                             <div class="contact_form">
                                <div class="contact_description">
-                                <div class="m-20">
+                                  <div class="m-20">
                                     <span class="text_contact_desc">I am always open to discussing <b>new projects, opportunities in tech world,
-                                partnerships</b> and more so <b>mentorship.</b></span>
-                                </div>
+                                       partnerships</b> and more so <b>mentorship.</b></span>
+                                  </div>
                                 <form action="">
-                                <div class="input-form">
-                                    <label for="message">Name:</label>
-                                    <input type="text" id="name" placeholder="" required >
-                                </div>    
-                                <div class="input-form">
-                                    <label for="message">Email:</label>
-                                    <input type="email" id="email" placeholder="" required>
-                                </div>   
-                                <div class="input-form">
-                                    <label for="message">Message:</label>
-                                    <input type="text" id="message" placeholder="" required >
-                                </div>  
-                                <div class="input-form">
-                                <button type="submit" class="button-submit text-submit">Submit</button>
-                                </div> 
-                            </form>   
+                                  <div class="input-form">
+                                      <label for="message">Name:</label>
+                                      <input type="text" id="name" placeholder="" required >
+                                  </div>    
+                                  <div class="input-form">
+                                      <label for="message">Email:</label>
+                                      <input type="email" id="email" placeholder="" required>
+                                  </div>   
+                                  <div class="input-form">
+                                      <label for="message">Message:</label>
+                                      <input type="text" id="message" placeholder="" required>
+                                  </div>  
+                                  <div class="input-form">
+                                    <button type="submit" class="button-submit text-submit">Submit</button>
+                                  </div> 
+                                </form>   
                             </div>
-                            </div>
-                </div>               
-        </section>
+                          </div>
+                        </div>
+                </div>  
+      </section>
     </main>
   </body>
 </html>
