--- a/contact_page.html
+++ b/contact_page.html
@@ -218,7 +218,7 @@
                                <div class="contact_description">
                                   <div class="m-20">
                                     <span class="text_contact_desc">I am always open to discussing <b>new projects, opportunities in tech world,
-                                       partnerships</b> and more so <b>mentorship.</b></span>
+                                       partnerships</b> and more soo <b>mentorship.</b></span>
                                   </div>
                                 <form action="">
                                   <div class="input-form">
