--- a/landing_page.html
+++ b/landing_page.html
@@ -243,7 +243,7 @@
                                 <span class="text_mentorship_dev">Mentorship</span>
                             </div>
                             <div class="mentorship_dev_heading">
-                                 <p class="text_mentorship_dev_details">I have also found great joy in sharing my 
+                                 <p class="text_mentorship_dev_details">I have also found great joy inn sharing my 
                                     knowledge with others. Being a technical 
                                     mentor allows me to give back to the 
                                     community that has supported me 
